# process-mining

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
process_mining/adapter/: cache.py
process_mining/domain/models/: event_log.py
process_mining/domain/port/repositories/: event_repository.py
